# route-optimizer

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  map.html
benchmark/: benchmark.cpp
data/: delivery_points.csv
include/: all_pairs.h  delivery_points.h  dijkstra.h  floyd_warshall.h  geo_utils.h  graph.h  nearest_neighbour.h  osm_loader.h  route_json.h  snap.h  two_opt.h
scripts/: fetch_osm.sh
src/: all_pairs.cpp  chandigarh_demo.cpp  delivery_points.cpp  dijkstra.cpp  floyd_warshall.cpp  geo_utils.cpp  graph.cpp  main.cpp  nearest_neighbour.cpp  osm_loader.cpp  route_json.cpp  snap.cpp  two_opt.cpp
tests/: test_all_pairs.cpp  test_dijkstra.cpp  test_floyd_warshall.cpp  test_osm_loader.cpp  test_route_json.cpp  test_snap.cpp  test_tour.cpp
tests/fixtures/: tiny_osm.json
